<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="player_more_actions">More actions</string>
    <string name="player_more_short">MORE</string>
    <string name="player_more_song_subtitle">%1$s · %2$s</string>
    <string name="player_go_to_album">Go to album</string>
    <string name="player_lyrics">Lyrics</string>
    <string name="player_open_lyrics">Open lyrics</string>
    <string name="player_shuffle_on">Shuffle on</string>
    <string name="player_shuffle_off">Shuffle off</string>
    <string name="player_previous_song">Previous song</string>
    <string name="player_next_song">Next song</string>
    <string name="player_repeat_off">Repeat off</string>
    <string name="player_repeat_all">Repeat all</string>
    <string name="player_repeat_one">Repeat one</string>
    <string name="player_pause">Pause</string>
    <string name="player_play">Play</string>
    <string name="player_sleep_timer_active">Sleep timer active</string>
    <string name="player_open_queues">Open queues</string>
    <string name="player_collapse">Collapse player</string>
    <string name="player_album_art_for">Album art for %1$s</string>
    <string name="player_open_for">Open player for %1$s</string>
    <string name="player_unknown_title">Unknown Title</string>
    <string name="player_unknown_artist">Unknown Artist</string>
    <string name="player_unknown_album">Unknown Album</string>
...
    <string name="player_cassette_pause">PAUSE</string>
    <string name="player_cassette_play">PLAY</string>
    <string name="player_cassette_mix">MIX</string>
    <string name="player_cassette_loop">LOOP</string>
    <string name="player_cassette_all">ALL</string>
    <string name="player_cassette_one">ONE</string>
    <string name="player_cassette_save">SAVE</string>
    <string name="player_cassette_queue">QUEUE</string>
    <string name="player_previous_hold">Previous track. Hold to seek backward</string>
    <string name="player_next_hold">Next track. Hold to seek forward</string>
    <string name="player_seek_backward_hold">Seek backward while held</string>
    <string name="player_seek_forward_hold">Seek forward while held</string>
    <string name="player_disable_shuffle">Disable shuffle</string>
    <string name="player_enable_shuffle">Enable shuffle</string>
    <string name="player_enable_repeat_all">Enable repeat all</string>
    <string name="player_enable_repeat_one">Enable repeat one</string>
    <string name="player_disable_repeat">Disable repeat</string>
    <string name="player_remove_favorite">Remove from favorites</string>
    <string name="player_add_favorite">Add to favorites</string>
    <string name="player_added_to_favorites">Added to favorites</string>
    <string name="player_removed_from_favorites">Removed from favorites</string>
    <string name="player_wheel_now_playing">Now Playing</string>
    <string name="player_wheel_music">Music</string>
    <string name="player_wheel_menu">MENU</string>
    <string name="player_flip_queue">QUEUE</string>
...
